# BurnModels

./: Cargo.toml  README.md
crates/animal-classification/: Cargo.toml
crates/animal-classification/src/: data.rs  error.rs  infer.rs  main.rs  model.rs  train.rs
crates/burn-tutorial/: Cargo.toml
crates/burn-tutorial/src/: main.rs
crates/cifar-cnn/: Cargo.toml
crates/cifar-cnn/src/: data.rs  dataset.rs  inference.rs  main.rs  model.rs  training.rs
crates/gym-data-regression/: Cargo.toml
crates/gym-data-regression/src/: data.rs  infer.rs  main.rs  model.rs  training.rs
crates/resnet/: Cargo.toml
crates/resnet/src/: block.rs  config.rs  imagenet.rs  main.rs  resnet.rs  weights.rs
crates/yolox/: Cargo.toml
crates/yolox/src/: blocks.rs  bottleneck.rs  boxes.rs  darknet.rs  head.rs  main.rs  pafpn.rs  weights.rs  yolox.rs
src/: main.rs
