[package]
name = "burn-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
simple_logger = "5.0.0"
log = "0.4.22"
tokio = {version = "1.40.0", features = ["full"]}
burn = {version = "0.15.0", features = ["default", "vision", "train","tch", "metrics", "network", "autodiff"]}
burn-cuda = {version = "0.15.0", features = ["default"]}
burn-tch = {version = "0.15.0", features = ["default"]}
tch = {version = "0.15.0", features = ["download-libtorch"]}