[package]
name = "person-regression"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
simple_logger = "5.0.0"
log = "0.4.22"
burn = {version = "0.15.0", features = ["default", "vision", "train","tch", "metrics", "network", "autodiff"]}
burn-cuda = {version = "0.15.0", features = ["default"]}
burn-tch = {version = "0.15.0", features = ["default"]}
tch = {version = "0.15.0", features = ["download-libtorch"]}
csv = "1.3.1"
serde = {version = "1.0.215", features = ["derive"] }